# TASK-96

./: metadata.json
repo/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  check_coverage.sh  docker-compose.dev.yml  docker-compose.yml  run_e2e.sh  run_tests.sh
repo/API_tests/: README.md  auth_tests.rs  booking_tests.rs  business_tests.rs  scheduler_integration_tests.rs  search_reporting_tests.rs
repo/e2e_tests/: http_tests.rs
repo/migrations/00000000000001_initial_schema/: down.sql  up.sql
repo/migrations/00000000000002_session_idle_timeout/: down.sql  up.sql
repo/migrations/00000000000003_business_fields/: down.sql  up.sql
repo/migrations/00000000000004_booking_workflow/: down.sql  up.sql
repo/migrations/00000000000005_reporting_delivery_meta/: down.sql  up.sql
repo/migrations/00000000000006_candidate_location/: down.sql  up.sql
repo/migrations/00000000000007_compensation_structured_fields/: down.sql  up.sql
repo/scripts/: entrypoint.sh  reset_db.sh
repo/seeds/: README.md
repo/src/: lib.rs
repo/src/api/: extractors.rs  mod.rs
repo/src/api/handlers/: audit.rs  auth.rs  bookings.rs  candidates.rs  integrations.rs  mod.rs  offers.rs  onboarding.rs  reporting.rs  search.rs  users.rs
repo/src/api/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
repo/src/api/routes/: audit.rs  (+11 more)
repo/src/application/: auth_service.rs  booking_service.rs  candidate_service.rs  connector_executor.rs  eligibility_service.rs  idempotency_op.rs  integration_service.rs  mod.rs  offer_service.rs  onboarding_service.rs  reporting_service.rs  search_service.rs  user_service.rs
repo/src/domain/: mod.rs
repo/src/infrastructure/: mod.rs
repo/src/shared/: app_state.rs  errors.rs  idempotency.rs  mod.rs  network.rs  pagination.rs  response.rs
repo/unit_tests/: agreement_tests.rs  auth_context_tests.rs  booking_rules_tests.rs  booking_state_machine_tests.rs  captcha_tests.rs  compensation_tests.rs  error_tests.rs  export_staging_tests.rs  idempotency_logic_tests.rs  integration_sync_tests.rs  mod.rs  offer_state_machine_tests.rs  password_tests.rs  readiness_tests.rs  reporting_delivery_tests.rs  response_envelope_tests.rs  scheduler_tests.rs  search_tests.rs  seed_config_tests.rs
(+52 files in other folders)
